tests/negative/neg_string_attribute.safe
-- Test: neg_string_attribute
-- Description: String attributes remain outside the PR11.2 text subset.
-- Expected: REJECT unsupported_source_construct

package neg_string_attribute

   function measure (name : in string) returns integer

      return name.length;

